[package]
name = "homeval"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["PotentialStyx <62217716+PotentialStyx@users.noreply.github.com>"]
repository = "https://github.com/goval-community/homeval/"
description = """A custom implementation of replits evaluation protocol.
See https://govaldocs.pages.dev"""

[workspace]
members = [".", "migration", "entity"]

[features]
default = ["replspace", "database", "repldb", "verify_connections"]
repldb = ["database"]
database = ["dep:sea-orm", "dep:sea-query", "dep:migration", "dep:entity"]
replspace = []
fun-stuff = ["dep:chrono", "dep:chrono-tz"]
verify_connections = ["dep:pasetors", "dep:hyper", "dep:hyper-tls"]

[dependencies]
deno_core = "0.202.0"
env_logger = { git = "https://github.com/tmccombs/env_logger", rev = "a47d1d99", features=["kv_unstable"] }
futures-channel = "0.3.26"
futures-util = "0.3.26"
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["kv_unstable", "kv_unstable_serde"] }
prost = "0.11.8"
prost-types = "0.11.8"
serde_json = "1.0.97"
serde = "1.0.162"
tokio = {version="1.26.0", features = ["full"]}
tokio-stream = { version = "0.1.14", features = ["fs"] }
base64 = "0.21.0"
portable-pty = "0.8.1"

include_directory = { git = "https://github.com/goval-community/include_directory.git", rev = "bea5083a" }
futures = "0.3.28"
axum = { version = "0.6.18", features = ["ws"] }
systemstat = "0.2.3"
cpu-time = "1.0.0"
notify-debouncer-full = { version = "0.1.0", default-features = false, features = ["serde"] }
deadqueue = { version = "0.2.4", default-features = false, features = ["unlimited"] }
similar = "2.2.1"
prost-wkt-types = { git = "https://github.com/fdeantoni/prost-wkt/", rev="15bc0a06"}
toml = "0.7.4"
textnonce = "1.0.0"


chrono = { version = "0.4.26", default-features = false, features = ["time", "std", "libc", "clock"], optional = true }
chrono-tz =  { version = "0.8.2", optional = true }


sea-orm = { version = "0.11.3", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "postgres-array" ], optional = true }
migration = { path = "migration", optional = true}
entity = { path = "entity", optional = true}
sea-query = { version = "0.28.5", optional = true }
pasetors = { version = "0.6.7", default-features = false, features = ["v2"], optional = true }
hyper = { version = "0.14.26", features = ["http1", "http2", "client"], optional = true }
hyper-tls = { version = "0.5.0", optional = true }

[build-dependencies]
prost-build = "0.11.8"
deno_core = { version = "0.202.0", features = ["include_js_files_for_snapshotting"] }
