cargo-features = ["codegen-backend"]

[profile.dev]
codegen-backend = "cranelift"

[package]
name = "homeval"
version = "0.3.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["PotentialStyx <62217716+PotentialStyx@users.noreply.github.com>"]
repository = "https://github.com/goval-community/homeval/"
description = """A custom implementation of replits evaluation protocol.
See https://govaldocs.pages.dev"""

[workspace]
members = [".", "migration", "entity", "services", "protobuf"]

[features]
default = ["replspace", "database", "repldb", "verify_connections"]
repldb = ["database"]
database = ["dep:sea-orm", "dep:sea-query", "dep:migration", "dep:entity"]
replspace = []
fun-stuff = ["dep:chrono", "dep:chrono-tz"]
verify_connections = ["dep:hyper", "dep:hyper-tls", "dep:hyper-util", "dep:http-body-util"]

[dependencies]
goval = { path = "protobuf", package = "protobuf" }
homeval_services = { path = "services", package = "services" }
env_logger = { git = "https://github.com/tmccombs/env_logger", rev = "a47d1d99", features=["kv_unstable"] }
futures-channel = "0.3.26"
futures-util = "0.3.26"
log = { version = "0.4.17", features = ["kv_unstable", "kv_unstable_serde"] }
prost = "0.12.3"
prost-types = "0.12.3"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
tokio = {version="1.26.0", features = ["full"]}
base64 = "0.21.0"
futures = "0.3.28"
axum = { version = "0.7.4", features = ["ws"] }
cpu-time = "1.0.0"
deadqueue = { version = "0.2.4", default-features = false, features = ["unlimited"] }
toml = "0.8.8"
textnonce = "1.0.0"


chrono = { version = "0.4.33", default-features = false, features = ["std", "libc", "clock"], optional = true }
chrono-tz =  { version = "0.8.2", optional = true }


sea-orm = { version = "0.12.2", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "postgres-array" ], optional = true }
migration = { path = "migration", optional = true}
entity = { path = "entity", optional = true}
sea-query = { version = "0.30.7", optional = true }
pasetors = { version = "0.6.7", default-features = false, features = ["v2"] }
hyper = { version = "1.1.0", features = ["http1", "http2", "client"], optional = true }
hyper-util = { version = "0.1.2", features = ["client", "client-legacy", "http1", "http2"], optional = true }
hyper-tls = { version = "0.6.0", optional = true }
http-body-util = { version = "0.1.0", optional = true }
anyhow = "1.0.71"
