[package]
name = "protobuf"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "protobuf"
path = "src/lib.rs"

[dependencies]
prost = "0.12.3"
prost-types = "0.12.3"

[build-dependencies]
prost-build = "0.12.3"
