[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
deadqueue = { version = "0.2.4", default-features = false, features = ["unlimited"] }
goval = { package = "protobuf", path = "../protobuf"}
log = "0.4.19"
prost = "0.11.9"
serde = "1.0.164"
serde_json = "1.0.97"
tokio = "1.28.2"

[lib]
name = "services"
path = "src/lib.rs"
