[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
crc32fast = { version = "1.3.2", features = ["nightly"] }
deadqueue = { version = "0.2.4", default-features = false, features = ["unlimited"] }
goval = { package = "protobuf", path = "../protobuf"}
log = { version = "0.4.17", features = ["kv_unstable", "kv_unstable_serde"] }
notify-debouncer-full = { version = "0.2.0", default-features = false }
prost = "0.11.9"
prost-types = "0.11.9"
ropey = "1.6.0"
serde = "1.0.164"
serde_json = "1.0.97"
similar = "2.2.1"
tokio = "1.28.2"

[lib]
name = "services"
path = "src/lib.rs"
