[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
crc32fast = { version = "1.3.2", features = ["nightly"] }
deadqueue = { version = "0.2.4", default-features = false, features = ["unlimited"] }
futures-util = "0.3.28"
goval = { package = "protobuf", path = "../protobuf"}
notify-debouncer-full = { version = "0.3.1", default-features = false }
portable-pty = "0.8.1"
prost = "0.12.3"
prost-types = "0.12.3"
ropey = "1.6.0"
serde = "1.0.196"
serde_json = "1.0.112"
similar = "2.2.1"
tokio = "1.28.2"
tracing = "0.1.40"
tracing-futures = "0.2.5"

[lib]
name = "services"
path = "src/lib.rs"
